--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -56,9 +56,9 @@
     </selfServiceUrlSetting>
   </selfServiceConfigurable>
   <connectionStrings>
-   <!--<add name="DSN" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" />
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123" providerName="System.Data.OleDb" />
+   <add name="DSN" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Acc;Persist Security Info=True;User Id=helpdesk-acc; Password=helpdesk-acc;MultipleActiveResultSets=True" />
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Acc;Persist Security Info=True;User Id=helpdesk-acc; Password=helpdesk-acc;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+   <!-- <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123" providerName="System.Data.OleDb" />
     <add name="DSN_AM" connectionString="Password=Ikea!2367;Persist Security Info=True;User ID=dhamdb;Initial Catalog=CFSQL0030;Data Source=CFPSEELM-NT2008;MultipleActiveResultSets=True" />-->
     <!--<add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />  
     <add name="AccessManagementDB" connectionString="Data Source=dhutvsql2;Initial Catalog=AccessManagementDBDataAdminB;User ID=sa;Password=;" providerName="System.Data.SqlClient" />
