#68092 - FAQ, show and sort on change date;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Extensions\Object\ObjectExtension.cs" />
     <Compile Include="Extensions\String\SplitExtension.cs" />
     <Compile Include="Extensions\String\StringExtension.cs" />
+    <Compile Include="Linq\DynamicSortingExtensions.cs" />
     <Compile Include="Linq\PredicateBuilder.cs" />
     <Compile Include="Logger\ILoggerService.cs" />
     <Compile Include="Logger\IStartUpTask.cs" />
