#70138 - CaseBinding for StateSecondary;

--- a/ExtendedCase/ExtendedCase.WebApi/Web.config
+++ b/ExtendedCase/ExtendedCase.WebApi/Web.config
@@ -9,7 +9,7 @@
     <section name="helpdeskApiSettings" type="ExtendedCase.HelpdeskApiClient.Configuration.HelpdeskApiSettings, ExtendedCase.HelpdeskApiClient" />
   </configSections>
   <connectionStrings>
-    <add name="HelpdeskDb" connectionString="Data Source=localhost;Initial Catalog=DH_Support;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskDb" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
