[Add] #70441 Added possibility to use Feature toggles for certain functionality https://en.wikipedia.org/wiki/Feature_toggle

--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Constants\CaseSearchConstants.cs" />
     <Compile Include="Constants\CaseSections.cs" />
     <Compile Include="Constants\CaseType.cs" />
+    <Compile Include="Constants\FeatureToggleTypes.cs" />
     <Compile Include="Constants\Shared.cs" />
     <Compile Include="Constants\DataTypeValue.cs" />
     <Compile Include="Constants\BRConstItem.cs" />
