--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Logger\Log4NetLoggerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializers\JsonSerializeService.cs" />
+    <Compile Include="Tools\EnumHelper.cs" />
     <Compile Include="Tools\PassWordHelper.cs" />
     <Compile Include="Tools\DatesHelper.cs" />
     <Compile Include="Tools\EmailHelper.cs" />
