--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -82,6 +82,7 @@
     <Compile Include="ActionSetting\ActionSetting.cs" />
     <Compile Include="ADFS\ADFSSettingEntity.cs" />
     <Compile Include="Application.cs" />
+    <Compile Include="ApplicationTypeEntity.cs" />
     <Compile Include="Building.cs" />
     <Compile Include="BulletinBoard.cs" />
     <Compile Include="BulletinBoardSearch.cs" />
@@ -182,6 +183,7 @@
     <Compile Include="GDPR\GDPROperationsAudit.cs" />
     <Compile Include="GDPR\GDPRTask.cs" />
     <Compile Include="GDPR\Enums\GDPRTaskStatus.cs" />
+    <Compile Include="ICaseEntity.cs" />
     <Compile Include="Inventory\InventoryTypeStandardSettings.cs" />
     <Compile Include="Invoice\InvoiceArticleProductAreaEntity.cs" />
     <Compile Include="Invoice\InvoiceChargeType.cs" />
