--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Models\Case\CaseSolutionConditionOverview.cs" />
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
     <Compile Include="Models\Case\CaseSolutionOverview.cs" />
+    <Compile Include="Models\Case\CaseTemplateData.cs" />
     <Compile Include="Models\Case\ExtendedCaseDataOverview.cs" />
     <Compile Include="Models\Case\LogFileContent.cs" />
     <Compile Include="Models\Case\Output\CustomerCasesStatus.cs" />
