--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="2.3.2" targetFramework="net452" />
   <package id="Bootstrap.Datepicker" version="1.3.0" targetFramework="net452" />
+  <package id="Chart.js" version="2.8.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="CommonServiceLocator.NinjectAdapter.Unofficial" version="3.2.2.0" targetFramework="net452" />
   <package id="DataAnnotationsExtensions" version="5.0.1.27" targetFramework="net452" />
@@ -39,8 +40,8 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.ReportViewer.2012.Runtime" version="11.0.3452.0" targetFramework="net452" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="1.7" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
