--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -12,6 +12,17 @@
     <add key="LogFolder" value="" /> <!--Example: C:\temp-->
     <add key="LogIdentifier" value="" /> <!-- -->
     <add key="ProductAreaSeparator" value="" /> <!--separator symbol. Example: ;-->
+    
+    <!-- Optional diagnostic parameters      
+    <add key="customersFilter" value="1" />
+    <add key="workingGroupsFilter" value="818" />
+    <add key="emailFolderOverride" value="Inbox/M2T_Test" />
+    <add key="emailFolderArchiveOverride" value="Inbox/M2T_TestArchive" />
+    <add key="logLevelOverride" value="1" />
+    <add key="enableIMAPIClientLog" value="True" />
+    <add key="IMAPIClientLogPath" value="c:\temp\IMAPI_Client.log" />
+    -->
+
   </appSettings>
   <connectionStrings>
     <add name="Helpdesk" connectionString="Data Source=DHUTVSQL6; Initial Catalog=Helpdesk-Dev; User Id=helpdesk-dev; Password=helpdesk-dev;Network Library=dbmssocn" />
