--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -394,6 +394,7 @@
     <Compile Include="Infrastructure\WebApi\WebApiService.cs" />
     <Compile Include="Infrastructure\WorkContext\Concrete\ApplicationContext.cs" />
     <Compile Include="Models\CaseSolution\CaseSolutionSettingsFieldModel.cs" />
+    <Compile Include="Models\Case\CaseLogViewModel.cs" />
     <Compile Include="Models\Case\CaseMoveModel.cs" />
     <Compile Include="Models\Case\CaseOperationResult.cs" />
     <Compile Include="Models\Case\CaseSectionInputData.cs" />
@@ -688,6 +689,7 @@
     <Content Include="Content\icons\advanced_search.png" />
     <Content Include="Content\icons\ajax-loader.gif" />
     <Content Include="Content\icons\clip.png" />
+    <Content Include="Content\icons\copy.png" />
     <Content Include="Content\icons\deal.png" />
     <Content Include="Content\icons\doc-download.png" />
     <Content Include="Content\icons\doc-edit.png" />
@@ -4100,6 +4102,8 @@
     <Content Include="Views\Cases\AdvancedSearch\_CustomerSearchResults.cshtml" />
     <Content Include="Views\Faq\_FaqList.cshtml" />
     <Content Include="Views\Faq\_FaqListWithDetails.cshtml" />
+    <Content Include="Views\Cases\_LogNoteEmails.cshtml" />
+    <Content Include="Views\Cases\_LogNoteFiles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
