[Add] #70685 Stored procedure for handling new jistorical report TODO:
* apply all filters
* workinggroup limitaiton on user level
* add stored procedure and indexes to script in git

--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -526,6 +526,8 @@
     <Compile Include="Models\Questionnaire\Write\ParticipantForInsert.cs" />
     <Compile Include="Models\OUOverview .cs" />
     <Compile Include="Models\ImpactOverview.cs" />
+    <Compile Include="Models\ReportService\HistoricalDataFilter.cs" />
+    <Compile Include="Models\ReportService\HistoricalDataResult.cs" />
     <Compile Include="Models\Shared\EntityWithEmail.cs" />
     <Compile Include="Models\UrgencyOverview.cs" />
     <Compile Include="Models\SystemOverview.cs" />
