--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
@@ -23,6 +23,10 @@
   <connectionStrings>
     <!-- Dev -->
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+
+    <!-- dhutvsql6 
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>
+    -->
   </connectionStrings>
   
   <system.web>
