--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -669,6 +669,7 @@
     <Content Include="Areas\Orders\Content\js\Order\order.edit.js" />
     <Content Include="Areas\Invoices\Scripts\Pages\invoicesOverview.js" />
     <Content Include="Areas\Reports\Content\js\chartjs-plugin-colorschemes.min.js" />
+    <Content Include="Areas\Reports\Content\js\chartjs-plugin-datalabels.min.js" />
     <Content Include="Areas\Reports\Content\js\reports.historical.js" />
     <Content Include="Areas\Reports\Content\js\reports.numberOfCases.js" />
     <Content Include="Areas\Reports\Content\js\reports.reportedTime.js" />
