[Fix] #70457 When using watch date, solved time and leadtime differs on mobile

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
@@ -13,7 +13,7 @@
   <appSettings>
     <add key="log4net.Internal.Debug" value="false" />
     <add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" />
-    <add key="dh_selfserviceaddress" value="dhHelpdeskUTV/Selfservice/case/Index/" />
+    <add key="dh_selfserviceaddress" value="dhHelpdeskUTV/Selfservice/" />
     <add key="dh_helpdeskaddress" value="dhHelpdeskUTV/" />
     <add key="DefaultCulture" value="sv" />
     <add key="SmtpServer" value="localhost" />
@@ -22,7 +22,7 @@
   
   <connectionStrings>
     <!-- Dev -->
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
 
     <!-- dhutvsql6 
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>
