#70946 - Change report "Number of cases"

--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Enums\Orders\OrderEmailTemplate.cs" />
     <Compile Include="Enums\Orders\Subtopic.cs" />
     <Compile Include="Enums\Projects\ProjectFields.cs" />
+    <Compile Include="Enums\Reports\NumberOfCasesGroup.cs" />
     <Compile Include="Enums\SortOrder.cs" />
     <Compile Include="Enums\Users\StartPage.cs" />
     <Compile Include="Enums\Users\TimeZoneAutodetectResult.cs" />
@@ -530,6 +531,8 @@
     <Compile Include="Models\ReportService\CommonReportDataFilter.cs" />
     <Compile Include="Models\ReportService\HistoricalDataFilter.cs" />
     <Compile Include="Models\ReportService\HistoricalDataResult.cs" />
+    <Compile Include="Models\ReportService\NumberOfCaseDataResult.cs" />
+    <Compile Include="Models\ReportService\NumberOfCasesDataFilter.cs" />
     <Compile Include="Models\ReportService\ReportedTimeDataFilter.cs" />
     <Compile Include="Models\ReportService\ReportedTimeDataResult.cs" />
     <Compile Include="Models\Shared\EntityWithEmail.cs" />
