#70755 - Actions tab - who the lognote is sent to;

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
@@ -21,9 +21,9 @@
   </appSettings>
   
   <connectionStrings>
-    <!-- Dev -->
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-
+    <!-- Dev   -->
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+  
     <!-- dhutvsql6 
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>
     -->
