#70755 - Actions tab - who the lognote is sent to; Mail2Tickets support;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
@@ -279,6 +279,7 @@
     <Compile Include="MapperData\Inventory\InventoryFieldSettingMapperDataForModelEdit.cs" />
     <Compile Include="MapperData\Inventory\InventoryFieldSettingMapperDataForProcessing.cs" />
     <Compile Include="MapperData\Logs\LogMapperData.cs" />
+    <Compile Include="MapperData\Mail2TicketMapperData.cs" />
     <Compile Include="Mappers\Calendars\BusinessModelToEntity\CalendarToEntityMapper.cs" />
     <Compile Include="Mappers\Calendars\EntityToBusinessModel\CalendarToBusinessModelMapper.cs" />
     <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentTemplateToEntityMapper.cs" />
