--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -4110,6 +4110,7 @@
     <Content Include="Views\Faq\_FaqListWithDetails.cshtml" />
     <Content Include="Views\Cases\_LogNoteEmails.cshtml" />
     <Content Include="Views\Cases\_LogNoteFiles.cshtml" />
+    <Content Include="Views\Cases\_Mail2TicketEmails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
